--- a/check out.html
+++ b/check out.html
@@ -43,7 +43,125 @@
     </div>
     <!--Spacer-->
 
-
+<div id="Form_Value_Con">
+    <div id="form_value">
+        <div id="form_con">
+            <form action="get_address">
+                <label for="heading" id="form-billing-heading">Billing Address:</label>
+                <div class="Address-con"><label for="name">Name:</label><input type="text" required autocomplete="name" placeholder="Please Enter Your Name"></div>
+                <div class="Address-con"><label for="contact-no.">Mobile no.:</label><input type="number" autocomplete="tel" max="9999999999" min="1111111111" required placeholder="Please Enter Your Mobile Number"></div>
+                <div class="Address-con"><label for="Email-id">Email ID:</label><input type="text" autocomplete="email" placeholder="Please Enter Your Email ID"></div>
+                <div class="Address-con"><label for="Address">Address:</label><input type="text" required autocomplete="street-address" placeholder="Please Enter Your Address"></div>
+                <div class="Address-con-sep">
+                    <label for="city-name">City:</label><input id="city-name" type="text" required autocomplete="home city" placeholder="Please Enter the Name of your City">
+                    <label for="postal-code">Pin code:</label><input id="city-name" type="text" required autocomplete="postal-code" placeholder="Please Enter the Name of your City">
+                </div>
+                <div class="Address-con-sep">
+                    <label for="country-name">Country:</label><input id="city-name" type="text" required value="India" autocomplete="country-name" placeholder="Please Enter the Name of your City">
+                    <label for="state-name">State:</label>
+                        <select id="country-state" name="country-state">
+                        <option value="">Select state</option>
+                        <option value="AN">Andaman and Nicobar Islands</option>
+                        <option value="AP">Andhra Pradesh</option>
+                        <option value="AR">Arunachal Pradesh</option>
+                        <option value="AS">Assam</option>
+                        <option value="BR">Bihar</option>
+                        <option value="CH">Chandigarh</option>
+                        <option value="CT">Chhattisgarh</option>
+                        <option value="DN">Dadra and Nagar Haveli</option>
+                        <option value="DD">Daman and Diu</option>
+                        <option value="DL">Delhi</option>
+                        <option value="GA">Goa</option>
+                        <option value="GJ">Gujarat</option>
+                        <option value="HR">Haryana</option>
+                        <option value="HP">Himachal Pradesh</option>
+                        <option value="JK">Jammu and Kashmir</option>
+                        <option value="JH">Jharkhand</option>
+                        <option value="KA">Karnataka</option>
+                        <option value="KL">Kerala</option>
+                        <option value="LA">Ladakh</option>
+                        <option value="LD">Lakshadweep</option>
+                        <option value="MP">Madhya Pradesh</option>
+                        <option value="MH">Maharashtra</option>
+                        <option value="MN">Manipur</option>
+                        <option value="ML">Meghalaya</option>
+                        <option value="MZ">Mizoram</option>
+                        <option value="NL">Nagaland</option>
+                        <option value="OR">Odisha</option>
+                        <option value="PY">Puducherry</option>
+                        <option value="PB">Punjab</option>
+                        <option value="RJ">Rajasthan</option>
+                        <option value="SK">Sikkim</option>
+                        <option value="TN">Tamil Nadu</option>
+                        <option value="TG">Telangana</option>
+                        <option value="TR">Tripura</option>
+                        <option value="UP">Uttar Pradesh</option>
+                        <option value="UT">Uttarakhand</option>
+                        <option value="WB">West Bengal</option>
+                        </select>
+                </div>
+                <div class="Address-con-note"><label for="notes">Notes (Optional):</label><textarea type="text" placeholder="Please enter any note regarding your order..."></textarea></div>
+                
+                <div id="checkbox_form"><input type="checkbox" name="checkbox" id="check-checkbox"><label for="checkbox">My Shipping address is same as Billing address.</label></div>
+                <label for="heading" id="form-shipping-heading">Shipping Address:</label>
+                <div class="Address-con"><label for="name">Name:</label><input type="text" required autocomplete="name" placeholder="Please Enter Your Name"></div>
+                <div class="Address-con"><label for="contact-no.">Mobile no.:</label><input type="number" autocomplete="tel" max="9999999999" min="1111111111" required placeholder="Please Enter Your Mobile Number"></div>
+                <div class="Address-con"><label for="Email-id">Email ID:</label><input type="text" autocomplete="email" placeholder="Please Enter Your Email ID"></div>
+                <div class="Address-con"><label for="Address">Address:</label><input type="text" required autocomplete="street-address" placeholder="Please Enter Your Address"></div>
+                <div class="Address-con-sep">
+                    <label for="city-name">City:</label><input id="city-name" type="text" required autocomplete="home city" placeholder="Please Enter the Name of your City">
+                    <label for="postal-code">Pin code:</label><input id="city-name" type="text" required autocomplete="postal-code" placeholder="Please Enter the Name of your City">
+                </div>
+                <div class="Address-con-sep">
+                    <label for="country-name">Country:</label><input id="city-name" type="text" required value="India" autocomplete="country-name" placeholder="Please Enter the Name of your City">
+                    <label for="state-name">State:</label>
+                        <select id="country-state" name="country-state">
+                        <option value="">Select state</option>
+                        <option value="AN">Andaman and Nicobar Islands</option>
+                        <option value="AP">Andhra Pradesh</option>
+                        <option value="AR">Arunachal Pradesh</option>
+                        <option value="AS">Assam</option>
+                        <option value="BR">Bihar</option>
+                        <option value="CH">Chandigarh</option>
+                        <option value="CT">Chhattisgarh</option>
+                        <option value="DN">Dadra and Nagar Haveli</option>
+                        <option value="DD">Daman and Diu</option>
+                        <option value="DL">Delhi</option>
+                        <option value="GA">Goa</option>
+                        <option value="GJ">Gujarat</option>
+                        <option value="HR">Haryana</option>
+                        <option value="HP">Himachal Pradesh</option>
+                        <option value="JK">Jammu and Kashmir</option>
+                        <option value="JH">Jharkhand</option>
+                        <option value="KA">Karnataka</option>
+                        <option value="KL">Kerala</option>
+                        <option value="LA">Ladakh</option>
+                        <option value="LD">Lakshadweep</option>
+                        <option value="MP">Madhya Pradesh</option>
+                        <option value="MH">Maharashtra</option>
+                        <option value="MN">Manipur</option>
+                        <option value="ML">Meghalaya</option>
+                        <option value="MZ">Mizoram</option>
+                        <option value="NL">Nagaland</option>
+                        <option value="OR">Odisha</option>
+                        <option value="PY">Puducherry</option>
+                        <option value="PB">Punjab</option>
+                        <option value="RJ">Rajasthan</option>
+                        <option value="SK">Sikkim</option>
+                        <option value="TN">Tamil Nadu</option>
+                        <option value="TG">Telangana</option>
+                        <option value="TR">Tripura</option>
+                        <option value="UP">Uttar Pradesh</option>
+                        <option value="UT">Uttarakhand</option>
+                        <option value="WB">West Bengal</option>
+                        </select>
+                </div>
+            </form>
+        </div>
+        <div id="value_con"></div>
+    </div>
+    <div id="payment_method"></div>
+</div>
 
 
     <script src="check out.js"></script>
