--- a/check out.html
+++ b/check out.html
@@ -102,7 +102,8 @@
                 </div>
                 <div class="Address-con-note"><label for="notes">Notes (Optional):</label><textarea type="text" placeholder="Please enter any note regarding your order..."></textarea></div>
                 
-                <div id="checkbox_form"><input type="checkbox" name="checkbox" id="check-checkbox"><label for="checkbox">My Shipping address is same as Billing address.</label></div>
+                <div id="checkbox_form"><label class="container">My Shipping address is same as Billing address.<input type="checkbox" checked="checked"><span class="checkmark"></span></label></div>
+                
                 <label for="heading" id="form-shipping-heading">Shipping Address:</label>
                 <div class="Address-con"><label for="name">Name:</label><input type="text" required autocomplete="name" placeholder="Please Enter Your Name"></div>
                 <div class="Address-con"><label for="contact-no.">Mobile no.:</label><input type="number" autocomplete="tel" max="9999999999" min="1111111111" required placeholder="Please Enter Your Mobile Number"></div>
