--- a/check out.html
+++ b/check out.html
@@ -191,18 +191,22 @@
             <button class="Option_pay Bottom_btn">COD<p>(Cash On Delivery)</p></button>
         </div>
         <div id="options_entery">
-            <div id="card_ent" class="">
+            <div id="upi_ent" class="">
                 <div id="app_list">
                     <div class="app_con"><img src="Payment-options/pngwing.com.png" alt="Google_pay_logo"><h1>Google Pay</h1></div>
                     <div class="app_con"><img src="Payment-options/vecteezy_paytm-logo-icon-vector_19040306.png" alt="Paytm_logo"><h1>PayTM</h1></div>
                     <div class="app_con"><img src="Payment-options/PhonePe_Icons_PNG_Image_vsb1hj.png" alt="Phone_pay_logo"><h1>Phone Pay</h1></div>
                 </div>
-                <div id="upi_int">
+                <div id="upi_int" class="input_pay">
                     <label for="Upi_Id">UPI ID:</label><input type="text" name="UPI_ID" placeholder="example@yahoo.in">
                 </div>
-                <div id="submit_btn">
+                <div class="submit_btn" id="upi_ent_sbt_btn">
                     <button>Pay</button>
                 </div>
+            </div>
+
+            <div id="card_ent" class="">
+
             </div>
         </div>
     </div>
