--- a/check out.html
+++ b/check out.html
@@ -201,7 +201,7 @@
                     <label for="Upi_Id">UPI ID:</label><input type="text" name="UPI_ID" placeholder="example@yahoo.in">
                 </div>
                 <div class="submit_btn" id="upi_ent_sbt_btn">
-                    <button>Pay</button>
+                    <button id="UPI_SBT_btn">Pay</button>
                 </div>
             </div>
 
