--- a/check out.html
+++ b/check out.html
@@ -311,6 +311,9 @@
                         <option id="" value="YES Bank" class="ACTI N">YES Bank</option>
                     </select>
                 </div>
+                <div class="submit_btn" id="CARD_ent_sbt_btn">
+                    <button id="NetBank_SBT_btn">Pay</button>
+                </div>
             </div>
         </div>
     </div>
