--- a/check out.html
+++ b/check out.html
@@ -46,20 +46,20 @@
 <div id="Form_Value_Con">
     <div id="form_value">
         <div id="form_con">
-            <form action="get_address">
+            <form action="get_address" id="addressForm">
                 <label for="heading" id="form-billing-heading">Billing Address:</label>
-                <div class="Address-con"><label for="name">Name:</label><input type="text" required autocomplete="name" placeholder="Please Enter Your Name"></div>
-                <div class="Address-con"><label for="contact-no.">Mobile no.:</label><input type="number" autocomplete="tel" max="9999999999" min="1111111111" required placeholder="Please Enter Your Mobile Number"></div>
-                <div class="Address-con"><label for="Email-id">Email ID:</label><input type="text" autocomplete="email" placeholder="Please Enter Your Email ID"></div>
-                <div class="Address-con"><label for="Address">Address:</label><input type="text" required autocomplete="street-address" placeholder="Please Enter Your Address"></div>
+                <div class="Address-con"><label for="name">Name:</label><input type="text" name="bil_Customer Name" required autocomplete="name" placeholder="Please Enter Your Name"></div>
+                <div class="Address-con"><label for="contact-no.">Mobile no.:</label><input name="bil_Mobile no." type="number" autocomplete="tel" max="9999999999" min="1111111111" required placeholder="Please Enter Your Mobile Number"></div>
+                <div class="Address-con"><label for="Email-id">Email ID:</label><input name="bil_Email ID" type="text" autocomplete="email" placeholder="Please Enter Your Email ID"></div>
+                <div class="Address-con"><label for="Address">Address:</label><input type="text" required name="bil_Address" autocomplete="street-address" placeholder="Please Enter Your Address"></div>
                 <div class="Address-con-sep">
-                    <label for="city-name">City:</label><input id="city-name" type="text" required autocomplete="home city" placeholder="Please Enter the Name of your City">
-                    <label for="postal-code">Pin code:</label><input id="city-name" type="text" required autocomplete="postal-code" placeholder="Please Enter the Name of your City">
+                    <label for="city-name">City:</label><input id="city-name" name="bil_City" type="text" required autocomplete="home city" placeholder="Please Enter the Name of your City">
+                    <label for="postal-code">Pin code:</label><input name="bil_Pincode" id="city-name" type="text" required autocomplete="postal-code" placeholder="Please Enter the Name of your City">
                 </div>
                 <div class="Address-con-sep">
-                    <label for="country-name">Country:</label><input id="city-name" type="text" required value="India" autocomplete="country-name" placeholder="Please Enter the Name of your City">
+                    <label for="country-name">Country:</label><input id="city-name" name="bil_Country" type="text" required value="India" autocomplete="country-name" placeholder="Please Enter the Name of your City">
                     <label for="state-name">State:</label>
-                        <select id="country-state" name="country-state">
+                        <select id="country-state" name="bil_State">
                         <option value="">Select state</option>
                         <option value="AN">Andaman and Nicobar Islands</option>
                         <option value="AP">Andhra Pradesh</option>
@@ -104,18 +104,18 @@
                 <div id="checkbox_form"><label class="container">My Shipping address is same as Billing address.<input id="checkbox_form_input" type="checkbox" checked="checked"><span class="checkmark"></span></label></div>
                 <div id="billing_form_con" class="collapse">
                     <label for="heading" id="form-shipping-heading">Shipping Address:</label>
-                    <div class="Address-con"><label for="name">Name:</label><input type="text" autocomplete="name" placeholder="Please Enter Your Name"></div>
-                    <div class="Address-con"><label for="contact-no.">Mobile no.:</label><input type="number" autocomplete="tel" max="9999999999" min="1111111111" placeholder="Please Enter Your Mobile Number"></div>
-                    <div class="Address-con"><label for="Email-id">Email ID:</label><input type="text" autocomplete="email" placeholder="Please Enter Your Email ID"></div>
-                    <div class="Address-con"><label for="Address">Address:</label><input type="text" autocomplete="street-address" placeholder="Please Enter Your Address"></div>
+                    <div class="Address-con"><label for="name">Name:</label><input type="text" name="ship_Customer Name" autocomplete="name" placeholder="Please Enter Your Name"></div>
+                    <div class="Address-con"><label for="contact-no.">Mobile no.:</label><input type="number" name="ship_Mobile no." autocomplete="tel" max="9999999999" min="1111111111" placeholder="Please Enter Your Mobile Number"></div>
+                    <div class="Address-con"><label for="Email-id">Email ID:</label><input type="text" name="ship_Email ID" autocomplete="email" placeholder="Please Enter Your Email ID"></div>
+                    <div class="Address-con"><label for="Address">Address:</label><input type="text" name="ship_Address" autocomplete="street-address" placeholder="Please Enter Your Address"></div>
                     <div class="Address-con-sep">
-                        <label for="city-name">City:</label><input id="city-name" type="text" autocomplete="home city" placeholder="Please Enter the Name of your City">
-                        <label for="postal-code">Pin code:</label><input id="city-name" type="text" autocomplete="postal-code" placeholder="Please Enter the Name of your City">
+                        <label for="city-name">City:</label><input id="city-name" type="text" name="ship_City" autocomplete="home city" placeholder="Please Enter the Name of your City">
+                        <label for="postal-code">Pin code:</label><input id="city-name" name="ship_Pincode" type="text" autocomplete="postal-code" placeholder="Please Enter the Name of your City">
                         </div>
                     <div class="Address-con-sep">
-                        <label for="country-name">Country:</label><input id="city-name" type="text" value="India" autocomplete="country-name" placeholder="Please Enter the Name of your City">
+                        <label for="country-name">Country:</label><input id="city-name" name="ship_Country" type="text" value="India" autocomplete="country-name" placeholder="Please Enter the Name of your City">
                         <label for="state-name">State:</label>
-                        <select id="country-state" name="country-state">
+                        <select id="country-state" name="ship_State">
                         <option value="">Select state</option>
                         <option value="AN">Andaman and Nicobar Islands</option>
                         <option value="AP">Andhra Pradesh</option>
@@ -157,7 +157,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="Address-con-note"><label for="notes">Notes (Optional):</label><textarea type="text" placeholder="Please enter any note regarding your order..."></textarea></div>
+                <div class="Address-con-note"><label for="notes">Notes (Optional):</label><textarea type="text" name="del_notes" placeholder="Please enter any note regarding your order..."></textarea></div>
 
                 <div id="btn_con"><button id="Add_com_btn">Proceed to Payment</button></div>
 
@@ -166,13 +166,13 @@
         <div id="value_con">
             <div id="final_value">
                 <h1 id="value_con_head">Cart Value:</h1>
-                <div class="cont_values_sep"><h3>Total:</h3><h3>Rs. 5890/-</h3></div>
-                <div class="cont_values_sep"><h3>Discount:</h3><h3>Rs. 1500/-</h3></div>
-                <div class="cont_values_sep"><h3>Coupon Discount:</h3><h3>Rs. 90/-</h3></div>
-                <div class="cont_values_sep"><h3>Delivery Fees:</h3><h3>Rs. 240/-</h3></div>
+                <div class="cont_values_sep"><h3>Total:</h3><h3 id="checkfinal">Rs. 0/-</h3></div>
+                <div class="cont_values_sep"><h3>Discount:</h3><h3 id="checkdis">Rs. 1500/-</h3></div>
+                <div class="cont_values_sep"><h3>Coupon Discount:</h3><h3 id="checkcdis">Rs. 90/-</h3></div>
+                <div class="cont_values_sep"><h3>Delivery Fees:</h3><h3 id="checkafees">Rs. 240/-</h3></div>
                 <div class="divider"></div>
-                <div class="cont_values_sep payable"><h3>Payable:</h3><h3>Rs. 5890/-</h3></div>
-                <div class="cont_values_sep payable"><input type="text" id="coupon_inp" placeholder="Coupon Code" required> <button id="coupon_btn">Apply</button></div>
+                <div class="cont_values_sep payable"><h3>Payable:</h3><h3 id="checktpay">Rs. 5890/-</h3></div>
+                <div class="cont_values_sep collapse payable"><input type="text" value="30" id="coupon_inp" placeholder="Coupon Code" required> <button id="coupon_btn">Remove</button></div>
             </div>
         </div>
     </div>
@@ -320,7 +320,7 @@
             <div id="COD_int" class="option collapse_pay">
                 <h3 id="cod_message">Kindly pay the Amount of <strong>Rs. 5290/- </strong>to the delivery agent.</h3>
                 <div class="submit_btn" id="CARD_ent_sbt_btn">
-                    <button id="NetBank_SBT_btn">Pay</button>
+                    <button id="COD_SBT_btn">Pay</button>
                 </div>
             </div>
         </div>
