--- a/index.html
+++ b/index.html
@@ -15,24 +15,29 @@
 <body>
     <!--Navigation bar-->
         <section id="nav-bar">
-            <div id="logo">
-                <!--<div class="nav-button">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>-->
-                <a href="index.html"><i class="fa-solid fa-snowflake fa-3x logo"></i></a>
-                <h2 class="logo">Nutrition</h2>
-            </div>
+            <a href="index.html" class="logo"><div id="logo">
+                <i class="fa-solid fa-snowflake fa-3x"></i>
+                <h1>Nutrition</h1>
+            </div></a>
             <div id="options">
-                <h1><a href="index.html">Home</a></h1>
-                <h1><a href="index.html">Products</a></h1>
-                <h1><a href="index.html">About Us</a></h1>
-                <h1><a href="index.html">Contact</a></h1>
-                <h1><a href="index.html">Authenticity</a></h1>
-                <input type="text" placeholder="Search" class="search">
-                <a href="cart.html"><i class="fa-solid fa-cart-shopping logo fa-2x cart"></i></a>
+                <a href="index.html"><h1>Home</h1></a>
+                <a href="index.html"><h1>Products</h1></a>
+                <a href="index.html"><h1>About Us</h1></a>
+                <a href="index.html"><h1>Contact Us</h1></a>
+                <a href="index.html"><h1>Authenticity</h1></a>
+            </div>
+            <div id="ic_options">
+                <input type="text" placeholder="Search" autocomplete="search" id="nav_search_id">
+                <div class="search_icon_con" id="search_icon_con">
+                    <div id="search_icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                    <div id="cross_icon"><i class="fa-solid fa-xmark"></i></div>
                 </div>
+                <div id="anime">
+                    <a href="cart.html"><i id="anime" class="fa-solid fa-cart-shopping fa-xl"></i></a>
+                    <a href="cart.html"><i id="anime" class="fa-solid fa-user fa-xl"></i></a>
+                    <a href="cart.html"><i id="anime" class="fa-solid fa-sharp fa-heart fa-xl"></i></a>
+                </div>
+            </div>
         </section>
 
     <!--Navigation bar-->
@@ -46,9 +51,41 @@
     <!--banner upper most-->
     <section id="banner">
         <div id="banner-1">
+            <div id="banner_button_con">
+                <div id="button_left" class="banner-button"><i class="fa-solid fa-xl fa-arrow-left-long"></i></div>
+                <div id="button_right" class="banner-button"><i class="fa-solid fa-xl fa-arrow-right"></i></div>
+            </div>
         </div>
     </section>
     <!--banner upper most-->
+
+    <!--Testimonials start-->
+    <section id="testimonial_con">
+        <div id="testimonial_1" class="testimonial">
+            <div class="test_person_id">
+                <div class="test_img_con">
+                </div>
+                <div>
+                    <h1></h1>
+                    <div class="test_stars_con">
+                    </div>
+                </div>
+            </div>
+            <div class="test_review_pr_name">
+                <div>
+                    <h2></h2>
+                    <div class="para_test">
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div id="testimonial_2" class="testimonial"></div>
+            <div id="testimonial_1" class="testimonial"></div>
+            <div id="testimonial_1" class="testimonial"></div>
+            <div id="testimonial_1" class="testimonial"></div>
+    </section>
+    <!--Testimonials End-->
 
     <!--Top selling start-->
     <section id="top-selling-con">
