--- a/index.html
+++ b/index.html
@@ -61,29 +61,7 @@
 
     <!--Testimonials start-->
     <section id="testimonial_con">
-        <div id="testimonial_1" class="testimonial">
-            <div class="test_person_id">
-                <div class="test_img_con">
-                </div>
-                <div>
-                    <h1></h1>
-                    <div class="test_stars_con">
-                    </div>
-                </div>
-            </div>
-            <div class="test_review_pr_name">
-                <div>
-                    <h2></h2>
-                    <div class="para_test">
-                        <p></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-            <div id="testimonial_2" class="testimonial"></div>
-            <div id="testimonial_1" class="testimonial"></div>
-            <div id="testimonial_1" class="testimonial"></div>
-            <div id="testimonial_1" class="testimonial"></div>
+        <!--testimonial added via JS-->
     </section>
     <!--Testimonials End-->
 
@@ -91,10 +69,41 @@
     <section id="top-selling-con">
         <div id="top-selling-title">
             <div class="arrow" id="button-left-top"><i class="fa-solid fa-arrow-left"></i></div>
-            <h1>~ ~Top Selling~ ~</h1>
+            <h1>Top Selling</h1>
             <div class="arrow" id="button-right-top"><i class="fa-solid fa-arrow-right"></i></div>
         </div>
-        <div class="product-list" id="top-selling"></div>
+        <div class="product-list" id="top-selling">
+            <div class="product">
+                <div class="product_image_con">
+                    <div class="dis_text">
+                        <h3>35%</h3>
+                        <p>OFF</p>
+                    </div>
+                    <div class="product_wish">
+                        <i class="fa-solid fa-heart fa-xl"></i>
+                    </div>
+                    <img src="images/product/2.png" alt="">
+                </div>
+                <div class="product_data">
+                    <div class="product_title">
+                        <h1>Proquest Nutrition's Power Protein 2 Kg in Chocolate Flavor...</h1>
+                    </div>
+                    <div class="price_rating">
+                        <div class="pricing">
+                            <p class="mrp">Rs. 13749/-</p>
+                            <h3 class="selling_p">Rs. 8888/-</h3>
+                        </div>
+                        <div class="rating_stars">
+                            <div class="stars golden"></div>
+                            <div class="stars golden"></div>
+                            <div class="stars golden"></div>
+                            <div class="stars golden"></div>
+                            <div class="stars"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!--Top selling end-->
 
