--- a/product.html
+++ b/product.html
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="section_1_div Left_Half">
-                    <div id="pr_name_rate_brand">
+                    <div id="pr_name_rate_brand" class="left_half_div">
                         <h1 id="pr_brand_name">Proquest Nutrition</h1>
                         <h2 id="pr_name"></h2>
                         <div id="pr_hero_rating" class="rating"></div>
@@ -129,7 +129,11 @@
                         </div>
                     </div>
 
-                    <div id="variantionH" class="left_half_div">
+                    <div id="variantionH" class="left_half_div"></div>
+
+                    <div class="left_half_div">
+                        <ul id="Bullet_Point_H">
+                        </ul>
                     </div>
 
                 </div>
