--- a/product.html
+++ b/product.html
@@ -136,6 +136,61 @@
                         </ul>
                     </div>
 
+                    <div class="left_half_div" id="pr_identifier">
+                    </div>
+
+                </div>
+            </section>
+
+            <!--Product Details Bottom-->
+            <section id="Product_det_btm">
+                <div id="pr_description">
+                    <div id="Des_H_con">
+                        <h2 class="Des_H_Con_Active" id="Des_H">Description</h2>
+                        <h2 id="UD_H">Usage Direction</h2>
+                    </div>
+                    <div>
+                        <p id="Description_Con"></p>
+                    </div>
+                </div>
+
+                <div class="Product_det_btm_div">
+                    <h2 class="Add_Info_heading">Additional Info :</h2>
+                    <div class="addi_info_con">
+                        <div class="addi_info_sep">
+                            <p><strong>Package Dimension: </strong>20 cm X 20 cm X 26 cm </p>
+                            <p><strong>Package Weight: </strong>2 Kg</p>
+                        </div>
+                        <div class="addi_info_sep">
+                            <p><strong>Manufactured by: </strong>VRS Food PVT LTD</p>
+                            <p><strong>Manufacturer Address: </strong>VRS Foods Pvt LTD,
+                                B-37, Sector 65, Noida
+                                Uttar Pradesh, India
+                                110035</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="reviews_con" class="Product_det_btm_div">
+                    <div id="rew_summary_con">
+                        <div id="total_rew_sum_con">
+                            <h2 id="total_rew_sum"></h2>
+                            <p>Out of 5</p>
+                        </div>
+                        <div class="rew_divider"></div>
+                        <div class="star_count_con">
+                            <div id="sum_rew_star_con" class="star_con">
+                            </div>
+                            <div id="rew_sum_con">
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="Rel_PR_CON">
+                    <div id="Rel_pr_con_H" class="Product_det_btm_div"><h2>Related Products:</h2></div>
+                    <div id="rel_pr_list_con" class="product-list"></div>
                 </div>
             </section>
         </section>
