--- a/cart.html
+++ b/cart.html
@@ -4,36 +4,48 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Nutrition</title>
+        <link rel="shortcut icon" href="images/Logo/white.png" type="image/x-icon">
         <link href="cart.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;1,100&family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/1544791081.js" crossorigin="anonymous"></script>
     </head>
-<body>
-    <!--Navigation bar-->
-    <section id="nav-bar">
-        <div id="logo">
-            <!--<div class="nav-button">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>-->
-            <a href="index.html"><i class="fa-solid fa-snowflake fa-3x logo"></i></a>
-            <h2 class="logo">Nutrition</h2>
+    <body>
+        <!--Navigation bar-->
+            <section id="nav-bar">
+                <a href="index.html" class="logo"><div id="logo">
+                    <i class="fa-solid fa-snowflake fa-3x"></i>
+                    <h1>Nutrition</h1>
+                </div></a>
+                <div id="options">
+                    <a href="index.html"><h1>Home</h1></a>
+                    <a href="index.html"><h1>Products</h1></a>
+                    <a href="index.html"><h1>About Us</h1></a>
+                    <a href="index.html"><h1>Contact Us</h1></a>
+                    <a href="index.html"><h1>Authenticity</h1></a>
+                </div>
+                <div id="ic_options">
+                    <input type="text" placeholder="Search" autocomplete="search" id="nav_search_id">
+                    <div class="search_icon_con" id="search_icon_con">
+                        <div id="search_icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                        <div id="cross_icon"><i class="fa-solid fa-xmark"></i></div>
+                    </div>
+                    <div id="anime">
+                        <a href="cart.html"><i id="anime" class="fa-solid fa-cart-shopping fa-xl"></i></a>
+                        <a href="cart.html"><i id="anime" class="fa-solid fa-user fa-xl"></i></a>
+                        <a href="cart.html"><i id="anime" class="fa-solid fa-sharp fa-heart fa-xl"></i></a>
+                    </div>
+                </div>
+            </section>
+        <!--Navigation bar-->
+
+        <!--Spacer-->
+        <div id="spacer">
+            <h2>  </h2>
         </div>
-        <div id="options">
-            <h1><a href="index.html">Home</a></h1>
-            <h1><a href="index.html">Products</a></h1>
-            <h1><a href="index.html">About Us</a></h1>
-            <h1><a href="index.html">Contact</a></h1>
-            <h1><a href="index.html">Authenticity</a></h1>
-            <input type="text" placeholder="Search" class="search">
-            <a href="cart.html"><i class="fa-solid fa-cart-shopping logo fa-2x cart"></i></a>
-            </div>
-    </section>
-    <!--Navigation bar-->
+        <!--Spacer-->
 
     <section id="all-content">
 
@@ -105,70 +117,88 @@
  <h1 id="testh1"></h1>
     <script src="cart.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
-
+    </section>
 </body>
 
 <!--Footer start-->
 <footer class="section-1">
+    <section id="newslater">
+        <div id="heading-news">
+            <img src="images/MAIL.png" alt="Mail Icon">
+            <h1>Subscribe for Our Offers, Deals and Newslater</h1>
+        </div>
+        <div class="form_con">
+            <form id="Footer-form">
+                <label for="name">Full Name:</label><input type="text" autocomplete="name" required placeholder="Full Name" name="name" id="name">
+                <label for="email">Eamil ID:</label><input type="email" autocomplete="email" required placeholder="Email ID" id="email" name="email">
+                <label for="contact">Mobile Number:</label><input type="number" autocomplete="tel" max="9999999999" min="1111111111" required placeholder="Mobile Number" id="contact" name="contact">
+                <input type="submit" value="submit" id="footer_form_button">
+            </form>
+        </div>
+    </section>
+
     <section id="footer">
         <div class="col">
-            <a href="index.html"><i id="footer-logo" class="fa-solid fa-snowflake fa-6x logo"></i></a>
-        <h4>Contact Us:</h4>
-        <p><strong>Address: </strong>Brand, 1st Block 1st Cross, Rammurthy nagar, Bangalore-560016</p>
-        <p><strong>Phone: </strong>+91 9877777777</p>
-        <p><strong>Hours: </strong>Mon - Sat, 10:00 AM to 06:00 PM</p>
-        <div class="follow">
-            <h4>Follow us:</h4>
-            <div class="icon">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-pinterest"></i>
-                <i class="fa-brands fa-youtube"></i>
-            </div>
-        </div>
+            <a href="index.html" class="footer-logo"><div id="footer-logo-div">
+                <i class="fa-solid fa-snowflake fa-6x"></i>
+                <h1>Nutrition</h1>
+            </div></a>
+            <h4>Contact Us:</h4>
+            <p><strong>Address: </strong>Brand, 1st Block 1st Cross, Rammurthy nagar, Bangalore-560016</p>
+            <p><strong>Phone: </strong>+91 9877777777</p>
+            <p><strong>Hours: </strong>Mon - Sat, 10:00 AM to 06:00 PM</p>
+
         </div>
 
         <div class="col">
-        <h4>About</h4>
-        <a href="#">About us</a>
-        <a href="#">Delivery Information</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms & Conditions</a>
-        <a href="#">Contact Us</a>
+            <h4>About</h4>
+            <a href="#">About us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Contact Us</a>
         </div>
 
         <div class="col">
-        <h4>My Account</h4>
-        <a href="#">Sign In</a>
-        <a href="#">View cart</a>
-        <a href="#">My Wishlist</a>
-        <a href="#">My Orders</a>
-        <a href="#">Helps</a>
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">My Orders</a>
+            <a href="#">Helps</a>
         </div>
 
         <div class="col install">
-        <h4>Install App</h4>
-        <p>From App store or Google Play</p>
-        <div class="row">
-            <a href="https://www.apple.com/in/app-store/"><i id="apps" class="fa-brands fa-app-store-ios fa-3x"></i></a>
-            <a href="https://play.google.com/store/games?utm_source=apac_med&utm_medium=hasem&utm_content=Oct0121&utm_campaign=Evergreen&pcampaignid=MKT-EDR-apac-in-1003227-med-hasem-py-Evergreen-Oct0121-Text_Search_BKWS-BKWS%7CONSEM_kwid_43700065205026415_creativeid_535350509927_device_c&gclid=CjwKCAiAmJGgBhAZEiwA1JZolgdrHOyTts-avoe3MnlIru_Ikrzg3JsOjMldvmVRxk5ZV6SoB8XPNhoCkLkQAvD_BwE&gclsrc=aw.ds"><i id="apps" class="fa-brands fa-google-play fa-3x"></i></a>
-        </div>
-        <p>Secured Payment Gateways</p>
-        <div class="row">
-            <i class="fa-brands fa-cc-visa fa-2x"></i>
-            <i class="fa-brands fa-cc-mastercard fa-2x"></i>
-            <i class="fa-brands fa-google-pay fa-2x"></i>
-            <i class="fa-brands fa-paypal fa-2x"></i>
-            <i class="fa-brands fa-amazon-pay fa-2x"></i>
-            <i class="fa-brands fa-apple-pay fa-2x"></i>
-        </div>
-        </div>
-        <div class="copy">
-        </i><p>© 2023, Tech2 etc - HTML CSS Ecommerce Template</p>
+            <h4>Install App</h4>
+            <p>From App store or Google Play</p>
+            <div class="row">
+                <a href="https://www.apple.com/in/app-store/"><i id="apps" class="fa-brands fa-app-store-ios fa-3x"></i></a>
+                <a href="https://play.google.com/store/games?utm_source=apac_med&utm_medium=hasem&utm_content=Oct0121&utm_campaign=Evergreen&pcampaignid=MKT-EDR-apac-in-1003227-med-hasem-py-Evergreen-Oct0121-Text_Search_BKWS-BKWS%7CONSEM_kwid_43700065205026415_creativeid_535350509927_device_c&gclid=CjwKCAiAmJGgBhAZEiwA1JZolgdrHOyTts-avoe3MnlIru_Ikrzg3JsOjMldvmVRxk5ZV6SoB8XPNhoCkLkQAvD_BwE&gclsrc=aw.ds"><i id="apps" class="fa-brands fa-google-play fa-3x"></i></a>
+            </div>
+            <p>Secured Payment Gateways</p>
+            <div class="row">
+                <i class="fa-brands fa-cc-visa fa-2x"></i>
+                <i class="fa-brands fa-cc-mastercard fa-2x"></i>
+                <i class="fa-brands fa-google-pay fa-2x"></i>
+                <i class="fa-brands fa-paypal fa-2x"></i>
+                <i class="fa-brands fa-amazon-pay fa-2x"></i>
+                <i class="fa-brands fa-apple-pay fa-2x"></i>
+            </div>
+            <div class="follow">
+                <h4>Follow us:</h4>
+                <div class="icon">
+                    <i class="fa-brands fa-facebook fa-2x"></i>
+                    <i class="fa-brands fa-instagram fa-2x"></i>
+                    <i class="fa-brands fa-twitter fa-2x"></i>
+                    <i class="fa-brands fa-pinterest fa-2x"></i>
+                    <i class="fa-brands fa-youtube fa-2x"></i>
+                </div>
+            </div>
         </div>
     </section>
+    <div class="copy">
+        </i><p>© 2023, Tech2 etc - HTML CSS Ecommerce Template</p>
+    </div>
 </footer>
-</section>
 <!--Footer end-->
 </html>
